# FastAPI-users-management

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  deploy.Dockerfile  docker-compose.yaml  filebeat.Dockerfile  filebeat.yml  log_config.json  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 2025_02_26_1940-38d83670f4ba_init.py  2025_02_28_1946-168a6e9e8620_nickname_unique_fix.py  2025_03_07_2053-8ff1195069f1_initial.py  2025_03_10_0833-e7642893005b_init.py  2025_03_14_1724-9f1e4e457446_init.py
src/: bootstrap.py  exceptions.py  main.py  middlewares.py  routers.py  settings.py
src/api/: health_check.py  root_router.py
src/api/health_check/: __init__.py  healthcheck.py  liveness.py  readiness.py
src/api/v1/: __init__.py  router.py
src/api/v1/management_routers/: create_user.py  delete_user.py  find_nickname.py  get_user.py  update_user.py
src/api/v1/routers/: create_user.py  delete_user.py  get_user.py  update_user.py
src/app/: exceptions.py  models.py
src/app/depends/: __init__.py  providers.py  providers_depends.py  repositories.py  repositories_depends.py  services.py  services_depends.py  use_cases.py  use_cases_depends.py
src/app/providers/: __init__.py  api_access.py
src/app/providers/impls/: api_access.py
src/app/providers/protocols/: api_access_protocol.py
src/app/repositories/: __init__.py  exceptions_handler.py  repository.py
src/app/repositories/impls/: users_cache.py  users_cache_repository.py  users_sql.py  users_sql_repository.py
src/app/repositories/protocols/: cache_repository_protocol.py  users_cache_protocol.py  (+3 more)
src/app/schemas/: users.py
src/app/services/: __init__.py
src/app/use_cases/: __init__.py
src/core/: __init__.py  db.py  depends.py  exceptions.py  loggers.py  schemas.py
src/core/middlewares/: logger_middleware.py
src/core/models/: base.py  mixins.py
src/core/utils/: logging_utils.py
src/users_management/: bootstrap.py  exceptions.py  main.py  middlewares.py  routers.py  settings.py
src/users_management/api/: root_router.py
src/users_management/app/: exceptions.py  models.py
src/users_management/core/: __init__.py  db.py  depends.py  exceptions.py  gateways.py  loggers.py  schemas.py  settings.py
src/users_management/gateways/: __init__.py
tests/: conftest.py
tests/fixtures/: redis.py  sql.py
(+115 files in other folders)
