[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "fastapi-users-management"
version = "0.1.0"
description = "a microservice for user information management."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn>=0.34.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "redis>=5.2.1",
    "black>=25.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
]

[tool.setuptools]
packages = ["users_management"]
package-dir = {"" = "src"}

[tool.black]
line-length = 80
target-version = ['py312']

[tool.mypy]
explicit_package_bases = true
strict = true